[project]
name = "DMLProject"
version = "0.0.1"
description = "DMLProject"
authors = [{ name = "Laurits", email = "none@of.your.business.com" }]
requires-python = ">=3.8,<3.11"
readme = "README.md"
license = "MIT"
keywords = [
    "reinforcement learning",
    "machine learning",
    "research",
]
dependencies = [
    "tensorboard>=2.10.0",
    "wandb>=0.13.11",
    "gym==0.23.1",
    "gymnasium==0.29.1",
    "torch==2.4.1",
    "moviepy>=1.0.3",
    "pygame>=2.1",
    "huggingface-hub>=0.11.1",
    "rich<12.0",
    "tenacity>=8.2.2",
    "tyro>=0.5.10",
    "pyzmq>=25.0",
]

[project.optional-dependencies]
envpool = ["envpool>=0.6.4,<0.7", "opencv-python>=4.6.0.66,<5",]
procgen = ["procgen>=0.10.7,<0.11"]

docs = [
    "mkdocs-material>=8.4.3,<9",
    "markdown-include>=0.7.0,<0.8",
    "openrlbenchmark>=0.1.1b4,<0.2",
]
cloud = [
    "boto3>=1.24.70,<2",
    "awscli>=1.31.0,<2",
]
plot = []
pytest = ["pytest>=7.1.3,<8"]

[dependency-groups]
dev = ["pre-commit>=2.20.0,<3"]

[tool.hatch.build.targets.sdist]
include = [
    "cleanrl",
    "cleanrl_utils",
]

[tool.hatch.build.targets.wheel]
include = [
    "cleanrl",
    "cleanrl_utils",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"